# godson

./: .gitignore  CMakeLists.txt  drWhite.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
include/controller/: BombEffect.h  gameManager.h  healEffect.h  observerEffect.h  reverseWorldEffect.h  shieldEffect.h
include/model/: gameData.h  player.h
include/model/abilities/: ability.h  aspirin.h  bloodSerum.h  brotherRevenge.h  cryOfInsecurity.h  doping.h  elephantKiller.h  familyTrench.h  hooked.h  lastBullet.h  operationRoom.h  quarantine.h  selfHit.h  sharpBlade.h  volley.h  xRay.h
include/model/abilities/aminProtector/: cryOfInsecurity.h  lastBullet.h  selfHit.h
include/model/abilities/bigTaha/: brotherRevenge.h  volley.h  xRay.h
include/model/abilities/danyGo/: elephantKiller.h  familyTrench.h  hooked.h
include/model/abilities/drWhite/: aspirin.h  doping.h  (+1 more)
include/model/cards/: bigTaha.h  card.h  danyGo.h  drWhite.h  littleTaha.h  protectorAmin.h
include/view/: battleMap.h  helpMeOptions.h  helpMeView.h  preparationGameView.h  showMenuForChoosingcards.h  showMenuWithKey.h  startView.h  storitesMenu.h  storyShow.h
model/: ability.h  bigTaha.h  card.cpp  card.h  danyGo.h  drWhite.h  littleTaha.h  protectorAmin.h
model/abilities/: ability.h  aspirin.h  bloodSerum.h  doping.h  lastBullet.h
model/cards/: bigTaha.cpp  bigTaha.h  card.cpp  danyGo.cpp  danyGo.h  littleTaha.cpp  littleTaha.h  protectorAmin.cpp  protectorAmin.h
src/model/: player.cpp
src/model/abilities/: aspirin.cpp  bloodSerum.cpp  brotherRevenge.cpp  cryOfInsecurity.cpp  doping.cpp  elephantKiller.cpp  familyTrench.cpp  hooked.cpp  lastBullet.cpp  operatinRoom.cpp  quarantine.cpp  selfHit.cpp  sharpBlade.cpp  volley.cpp  xRay.cpp
src/model/cards/: bigTaha.cpp  card.cpp  danyGo.cpp  drWhite.cpp  littleTaha.cpp  protectorAmin.cpp
(+18 files in other folders)
